--- a/composer.json
+++ b/composer.json
@@ -16,13 +16,13 @@
     "php-http/discovery": "^1.0",
     "php-http/httplug": "^1.0",
     "php-http/message": "^1.6",
-    "symfony/options-resolver": "^3.4",
-    "symfony/serializer": "^3.4"
+    "symfony/options-resolver": "^3.4|^4.1",
+    "symfony/serializer": "^3.4|^4.1"
   },
   "require-dev": {
     "phpunit/phpunit": "^6.0|^7.0",
     "php-http/guzzle6-adapter": "^1.0",
-    "symfony/var-dumper": "^3.4"
+    "symfony/var-dumper": "^3.4|^4.1"
   },
   "autoload": {
     "psr-4": {
